modules/manifests/k8s/api/mecanica-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mecanica-svc
  namespace: zemechanics
spec:
  type: ClusterIP
  selector:
    app: mecanica-dp
  ports:
    - port: 80
      targetPort: 8000
