modules/manifests/k8s/api/mecanica-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mecanica-ingress
  namespace: zemechanics
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mecanica-svc
                port:
                  number: 80
